bug 78262, cannot delete encrypted passwords, r=matt, sr=alecf